//! Zero-Copy Implementation Example
//! 
//! This module demonstrates how true zero-copy serialization would work
//! with aligned proto and Avro schemas.

use crate::core::avro_unified::VectorRecord;
use apache_avro::{from_value, to_value, Schema};
use bytes::Bytes;
use prost::Message;
use std::io::Cursor;

/// Demonstrates zero-copy serialization from gRPC to Avro
/// 
/// With aligned schemas, we can:
/// 1. Receive proto bytes from gRPC
/// 2. Parse directly into our unified VectorRecord
/// 3. Serialize to Avro without intermediate conversions
pub fn zero_copy_insert(proto_bytes: &[u8]) -> Result<Vec<u8>, Box<dyn std::error::Error>> {
    // Step 1: Decode proto bytes directly into VectorRecord
    // With aligned schemas, this is the SAME struct used everywhere
    let record = VectorRecord::decode(proto_bytes)?;
    
    // Step 2: Serialize to Avro for storage
    // No conversion needed - same struct!
    let avro_bytes = serialize_to_avro(&record)?;
    
    Ok(avro_bytes)
}

/// Zero-copy read from storage to gRPC response
pub fn zero_copy_read(avro_bytes: &[u8]) -> Result<Vec<u8>, Box<dyn std::error::Error>> {
    // Step 1: Deserialize from Avro
    let record: VectorRecord = deserialize_from_avro(avro_bytes)?;
    
    // Step 2: Encode to proto for gRPC response
    // No conversion needed - same struct!
    let mut proto_bytes = Vec::new();
    record.encode(&mut proto_bytes)?;
    
    Ok(proto_bytes)
}

/// Example of how the aligned VectorRecord would implement both proto and Avro traits
#[cfg(feature = "aligned_schemas")]
impl VectorRecord {
    /// Direct proto encoding (from prost)
    pub fn encode(&self, buf: &mut Vec<u8>) -> Result<(), prost::EncodeError> {
        // Proto encoding implementation
        prost::Message::encode(self, buf)
    }
    
    /// Direct proto decoding (from prost)
    pub fn decode(buf: &[u8]) -> Result<Self, prost::DecodeError> {
        // Proto decoding implementation
        prost::Message::decode(buf)
    }
    
    /// Direct Avro serialization
    pub fn to_avro(&self, schema: &Schema) -> apache_avro::Result<apache_avro::types::Value> {
        to_value(self)
    }
    
    /// Direct Avro deserialization
    pub fn from_avro(value: apache_avro::types::Value) -> apache_avro::Result<Self> {
        from_value(&value)
    }
}

/// Comparison: Current approach with conversions
pub mod current_approach {
    use super::*;
    
    /// Current insert requires conversions
    pub fn insert_with_conversions(proto_bytes: &[u8]) -> Result<Vec<u8>, Box<dyn std::error::Error>> {
        // Step 1: Decode proto VectorRecord
        let proto_record = crate::proto::proximadb::VectorRecord::decode(proto_bytes)?;
        
        // Step 2: Convert proto -> avro (ALLOCATION + COPY)
        let avro_record = convert_proto_to_avro(proto_record)?;
        
        // Step 3: Serialize to Avro
        let avro_bytes = serialize_to_avro(&avro_record)?;
        
        Ok(avro_bytes)
    }
    
    fn convert_proto_to_avro(proto: crate::proto::proximadb::VectorRecord) -> Result<VectorRecord, Box<dyn std::error::Error>> {
        // This conversion allocates new memory and copies all data
        Ok(VectorRecord {
            id: proto.id.unwrap_or_default(),
            collection_id: "extracted_from_context".to_string(), // Not in proto!
            vector: proto.vector,
            metadata: convert_metadata(proto.metadata), // Type conversion
            timestamp: proto.timestamp.unwrap_or(0) / 1000, // Micro to milli
            created_at: chrono::Utc::now().timestamp_millis(), // Generated
            updated_at: chrono::Utc::now().timestamp_millis(), // Generated
            expires_at: proto.expires_at,
            version: proto.version,
            rank: None, // Not in proto
            score: None, // Not in proto
            distance: None, // Not in proto
        })
    }
    
    fn convert_metadata(metadata: std::collections::HashMap<String, String>) -> std::collections::HashMap<String, serde_json::Value> {
        // Allocates new HashMap and converts all values
        metadata.into_iter()
            .map(|(k, v)| (k, serde_json::Value::String(v)))
            .collect()
    }
}

/// Benchmark comparison
#[cfg(test)]
mod benchmarks {
    use super::*;
    use criterion::{black_box, criterion_group, criterion_main, Criterion};
    
    fn bench_zero_copy(c: &mut Criterion) {
        let proto_bytes = create_test_proto_bytes();
        
        c.bench_function("zero_copy_insert", |b| {
            b.iter(|| {
                zero_copy_insert(black_box(&proto_bytes))
            })
        });
    }
    
    fn bench_with_conversions(c: &mut Criterion) {
        let proto_bytes = create_test_proto_bytes();
        
        c.bench_function("insert_with_conversions", |b| {
            b.iter(|| {
                current_approach::insert_with_conversions(black_box(&proto_bytes))
            })
        });
    }
    
    fn create_test_proto_bytes() -> Vec<u8> {
        // Create test data
        vec![0u8; 1024] // Placeholder
    }
}

// Placeholder functions for compilation
fn serialize_to_avro(_record: &VectorRecord) -> Result<Vec<u8>, Box<dyn std::error::Error>> {
    Ok(vec![])
}

fn deserialize_from_avro(_bytes: &[u8]) -> Result<VectorRecord, Box<dyn std::error::Error>> {
    Ok(VectorRecord::default())
}